Fix home columns on mobile
We switched this to flexbox

--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -145,8 +145,10 @@ ol.article-list {
       margin-left: 0;
     }
 
+  .home-two-up {
+    flex-direction: column;
+  }
   .home-two-up .column {
-    float: none;
     width: auto;
   }
 
